<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/nomeNovoUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome" />

        <EditText
            android:id="@+id/sobreNomeNovoUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sobreNome" />

        <EditText
            android:id="@+id/emailNovoUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/profissaoNovoUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Profissao" />

        <EditText
            android:inputType="textPassword"
            android:id="@+id/senha1NovoUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/senha" />

        <EditText
            android:inputType="textPassword"
            android:id="@+id/senha2NovoUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirmaSenha" />

        <Button
            android:id="@+id/cadastrarNovoUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastrar" />


    </LinearLayout>


</LinearLayout>