<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    tools:context="juroapp.com.br.juroapp.Activity.actv.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="50dp">

        <EditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login" />

        <EditText
            android:id="@+id/senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/senha"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnEntrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/entrar" />

        <TextView
            android:id="@+id/criarConta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/CriarConta"
            android:textSize="16dp" />


    </LinearLayout>

</LinearLayout>
